# rust-os

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  Tuprules.tup  docker-compose.yml  liballoc  requirements.txt  search-index.js  test.py  travis-setup.sh  travis.sh
src/: .gitignore  Cargo.toml  Makefile  Tuprules.tup  config.txt  patch.patch  rust  rust-toolchain  rustdoc  rustdoc.sh  test.py  tup.config  update-from-rust-repo.sh
src/.cargo/: config
src/alloc_system/: Cargo.toml
src/alloc_system/src/: check.rs  lib.rs  libc.rs  page.rs
src/apps/: Cargo.toml  Tuprules.tup  app.make  app.tup  cairo.tup
src/apps/.cargo/: config
src/apps/cairo_demo/: Cargo.toml  Tupfile  Xargo.toml  cairo.rs  main.rs
src/apps/cairo_demo/src/: main.rs
src/apps/graphics_client/: Cargo.toml  Tupfile  main.rs
src/apps/graphics_client/src/: main.rs
src/apps/graphics_server/: Cargo.toml  main.rs  window.rs
src/apps/graphics_server/src/: main.rs
src/apps/hello/: Cargo.toml  Makefile  Tupfile  Xargo.toml  main.rs
src/apps/input/: Cargo.toml  Makefile  main.rs
src/boot/: .gitignore  Makefile  Tupfile  menu.lst
src/boot/amd64/: Makefile
src/boot/arm32/: Makefile
src/cairo/: Cargo.toml  bindings.rs.html  cairo.rs.html  lib.rs.html  surface.rs.html
src/cairo/lib/: libcairo.la  libpixman-1.la  libpng16.la
src/cairo/src/: bindings.rs  cairo.rs  font_face.rs  lib.rs  surface.rs
src/cairo_demo/: Cargo.toml
src/cairo_demo/src/: main.rs
src/freetype/: Cargo.toml
src/freetype/src/: bindings.rs  face.rs  freetype.rs  lib.rs
src/graphics/: Cargo.toml  lib.rs.html
src/graphics/src/: app.rs  components.rs  lib.rs  portal.rs
src/graphics_base/: Cargo.toml
src/graphics_base/src/: ipc.rs  lib.rs  types.rs
src/graphics_client/: Cargo.toml
src/graphics_client/src/: main.rs
src/graphics_server/: Cargo.toml
src/graphics_server/src/: app.rs  lib.rs  main.rs  pipe.rs  portal.rs  screen.rs
src/hello/: Cargo.toml  Tupfile  main.rs  unwind.rs
src/hello/src/: main.rs
src/include/: limits.h  stdlib.h  string.h
src/input/: Cargo.toml
src/input/src/: main.rs
src/kernel/: .gitignore  Cargo.toml  Makefile  Tupfile  async.rs  bit_vec.rs  bit_vec.rs.html  bitflags.rs  bitflags.rs.html  console.rs  console.rs.html  deferred.rs  deferred.rs.html  demo.rs  device.rs  elf.rs  elf.rs.html  io.rs  kobj.rs  ksyscall.rs  ksyscall.rs.html  lazy_static.rs  lazy_static.rs.html  libc_helpers.rs  libc_helpers.rs.html  logging.rs  logging.rs.html  macros.rs  main.rs  main.rs.html  menu.lst  miniz.c  miniz_sys.rs  multiboot.rs  multiboot.rs.html  mutex.rs  mutex.rs.html  once.rs  once.rs.html  phys_mem.rs  (+20 more)
src/kernel/.cargo/: config
src/kernel/arch/: mod.rs
src/kernel/io/: flat_map.rs  flat_map.rs.html  mod.rs  mod.rs.html  nodes.rs  nodes.rs.html  pipe.rs  pipe.rs.html
src/liballoc_system/: Cargo.toml  Tupfile  lib.rs
src/libc/: Cargo.toml  Tupfile  lib.rs.html  malloc.c
src/libc/src/: lib.rs
src/libcairo/: Cargo.toml  Tupfile  cairo.rs  lib.rs  surface.rs
src/libcairo/src/: cairo.rs  lib.rs  surface.rs
src/libcollections/: Tupfile
src/libecs/: Cargo.toml
src/libecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  system.rs  type_map.rs
src/libgraphics/: Cargo.toml  Makefile  Tupfile  Xargo.toml  frame_buffer.rs  ipc.rs  lib.rs  main.rs  types.rs  widget.rs
src/libgraphics/client/: client.rs  mod.rs  window.rs
src/libgraphics/src/: components.rs  frame_buffer.rs  lib.rs  system.rs  types.rs  widget.rs
src/liblibc/: Cargo.toml  Tupfile  lib.rs
src/liblibc/src/: lib.rs
src/libminiz-sys/: Tupfile  lib.rs
src/libos/: Cargo.toml  file.rs  lib.rs  mutex.rs  oshandle.rs  osmem.rs  process.rs  sharedmem.rs  thread.rs
src/libos/src/: file.rs  lib.rs  oshandle.rs  thread.rs
src/librt/: Cargo.toml  lib.rs  start.rs  unwind.rs
src/librt/src/: lib.rs  start.rs
src/libstd/: Cargo.toml  Tupfile  error.rs  lib.rs  memchr.rs
src/libstd/io/: error.rs  file.rs  mod.rs
src/libstd/num/: f32.rs  f64.rs  i16.rs  i8.rs  isize.rs  mod.rs  u16.rs  u64.rs  u8.rs  usize.rs
src/libstd/os/: file.rs  mod.rs  oshandle.rs  osmem.rs  sharedmem.rs
src/libstd/sys/: async.rs  mod.rs
src/libsyscall/: Cargo.toml  Tupfile  kernel.rs  lib.rs  libc_helpers.rs  macros.rs  marshal.rs  table.rs  unwind.rs  user.rs
src/libsyscall/arch/: amd64-kernel.json  amd64.json
src/libsyscall/kernel/: mod.rs
src/libsyscall/src/: error.rs  lib.rs  macros.rs  marshal.rs  table.rs
src/libsyscall/user/: libc_helpers.rs  mod.rs  unwind.rs
src/libtestlite/: Cargo.toml  lib.rs
src/libtestlite/src/: lib.rs
src/os/: Cargo.toml
src/os/src/: file.rs  lib.rs  libc_helpers.rs  mutex.rs  oshandle.rs  osmem.rs  process.rs  semaphore.rs  sharedmem.rs  thread.rs
src/rt/: Cargo.toml
src/rt/src/: lib.rs  start.rs  unwind.rs
src/sprite/: Cargo.toml
src/sprite/src/: copy_strides.rs  fill_strides.rs  lib.rs  sprite.rs
src/std/: Cargo.toml  error.rs  error.rs.html  lib.rs.html  macros.rs
src/std/io/: error.rs  error.rs.html  file.rs  mod.rs  mod.rs.html
src/std/num/: f32.rs.html  f64.rs.html  mod.rs.html
src/std/sys/: mod.rs
src/syscall/: Cargo.toml  lib.rs.html  macros.rs.html  marshal.rs.html  table.rs.html
src/syscall/arch/: amd64-kernel.json  amd64.json  arm32.json
src/syscall/src/: error.rs  lib.rs  libc_helpers.rs  macros.rs  marshal.rs  table.rs
src/syscall/user/: libc_helpers.rs.html  mod.rs.html  unwind.rs.html
src/terminal/: Cargo.toml
src/terminal/src/: main.rs  state.rs
src/ui/: Cargo.toml
src/ui/src/: app.rs  button.rs  db.rs  geometry.rs  id_map.rs  input.rs  lib.rs  panel.rs  path.rs  pipe.rs  portal.rs  prelude.rs  property.rs  property_map.rs  render.rs  widget.rs
src/ui_demo/: Cargo.toml
src/ui_demo/src/: main.rs
src/ui_macros/: Cargo.toml
src/ui_macros/src/: lib.rs
src/ui_server/: Cargo.toml  README.md
src/ui_server/src/: app.rs  lib.rs  main.rs  mouse.rs  pipe.rs  property.rs  screen.rs  server_portal.rs
src/ui_types/: Cargo.toml
src/ui_types/src/: lib.rs  types.rs
(+4259 files in other folders)
