[workspace]
members = [
    "apps/cairo_demo",
    "apps/graphics_client",
    "apps/graphics_server",
    "apps/hello",
    "apps/input",
    "liballoc_system",
    "libcairo",
    "libgraphics",
    "liblibc",
    "libos",
    "librt",
    "libstd",
    "libsyscall",
]

exclude = [
    "kernel"
]

[profile.release]
lto = true
codegen-units = 1
debug = true
