[workspace]
members = [
    "alloc_system",
    "cairo",
    "cairo_demo",
    "freetype",
    "graphics",
    "graphics_base",
    "graphics_client",
    "graphics_server",
    "hello",
    "input",
    "libc",
    "os",
    "rt",
    "std",
    "syscall",
    "terminal",
]

exclude = [
    "kernel"
]

[profile.release]
lto = true
codegen-units = 1
debug = true
