[workspace]
members = [
    "alloc_system",
    "hello",
    "input",
    "libc",
    "os",
    "rt",
    "sprite",
    "std",
    "syscall",
    "ui",
    "ui_demo",
    "ui_macros",
    "ui_server",
    "ui_types",
]

exclude = [
    "kernel"
]

[profile.release]
lto = true
codegen-units = 1
debug = true
