[package]
name = "cairo"
version = "0.0.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
build = "build.rs"
links = "cairo"
edition = "2018"

[target.'cfg(not(target_os = "rust_os"))'.dependencies]
cratesio_libc = { version = "0.2", package = "libc" }

[target.'cfg(target_os = "rust_os")'.dependencies]
libc = { path = "../libc" }
