[package]
name = "graphics"
version = "0.0.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[dependencies]
cairo = { path = "../cairo" }
graphics_base = { path = "../graphics_base" }
hashbrown = { version = "0.8", default-features = false }
hecs = { version = "0.2", default-features = false, features = ["single_threaded"], git = "https://github.com/1tgr/hecs.git", rev = "e719aeae2234995a1403b5fb59587a8e2a2bb951" }

[target.'cfg(target_os="rust_os")'.dependencies]
os = { path = "../os" }
syscall = { path = "../syscall" }

[target.'cfg(not(target_os="rust_os"))'.dependencies]
graphics_server = { path = "../graphics_server" }
minifb = "0.17"
