[package]
name = "graphics"
version = "0.0.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[dependencies]
cairo = { path = "../cairo" }
graphics_base = { path = "../graphics_base" }
hashbrown = { version = "0.8", default-features = false }
hecs = { version = "0.2", default-features = false, features = ["single_threaded"], git = "https://github.com/1tgr/hecs.git", rev = "c87707007be7d13d4a727c1531cce535ee8a80cf" }

[target.'cfg(target_os="rust_os")'.dependencies]
os = { path = "../os" }
syscall = { path = "../syscall" }

[target.'cfg(not(target_os="rust_os"))'.dependencies]
graphics_server = { path = "../graphics_server" }
minifb = "0.17"
