[package]
name = "graphics_base"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[dependencies]
cairo = { path = "../cairo" }
hashbrown = { version = "0.12", default-features = false, features = ["ahash"] }
hecs = { version = "0.2", default-features = false, features = ["single_threaded"], git = "https://github.com/1tgr/hecs.git", rev = "c87707007be7d13d4a727c1531cce535ee8a80cf" }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1"

[target.'cfg(target_os="rust_os")'.dependencies]
corepack = { version = "0.4", default-features = false, features = ["alloc"] }
os = { path = "../os" }
std = { path = "../std" }
syscall = { path = "../syscall" }
