[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "graphics_client"
version = "0.0.0"
edition = "2018"

[dependencies]
cairo = { path = "../cairo" }
freetype = { path = "../freetype" }
graphics = { path = "../graphics" }
hecs = { version = "0.2", default-features = false, git = "https://github.com/1tgr/hecs.git", rev = "c87707007be7d13d4a727c1531cce535ee8a80cf" }

[target.amd64.dependencies]
alloc_system = { path = "../alloc_system" }
os = { path = "../os" }
rt = { path = "../rt" }
std = { path = "../std" }
syscall = { path = "../syscall" }
