[package]
name = "graphics_server"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[dependencies]
cairo = { path = "../cairo" }
graphics_base = { path = "../graphics_base" }
hashbrown = { version = "0.9", default-features = false }
hecs = { version = "0.2", default-features = false, features = ["single_threaded"], git = "https://github.com/1tgr/hecs.git", rev = "c87707007be7d13d4a727c1531cce535ee8a80cf" }
jpeg-decoder = { version = "0.1", default-features = false, git = "https://github.com/1tgr/jpeg-decoder.git", rev = "f63a32c5154485e1d22e01384a9f78c6b1c4225b" }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1"

[target.'cfg(target_os="rust_os")'.dependencies]
alloc_system = { path = "../alloc_system" }
corepack = { version = "0.4", default-features = false, features = ["alloc"] }
os = { path = "../os" }
rt = { path = "../rt" }
std = { path = "../std" }
syscall = { path = "../syscall" }
