[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "kernel"
version = "0.0.0"

[[bin]]
name = "kernel"
path = "main.rs"
test = false

[features]
default = ["test"]
test = []

[dependencies]
alloc_system = { path = "../liballoc_system" }
bit-vec = { git = "https://github.com/1tgr/bit-vec", features = ["nightly"] }
libc = { path = "../liblibc" }
syscall = { path = "../libsyscall", features = ["kernel"] }
