[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "kernel"
version = "0.0.0"

[[bin]]
name = "kernel"
path = "main.rs"
test = false

[features]
default = ["test"]
test = []

[dependencies]
alloc_system = { path = "../liballoc_system" }
bit-vec = { git = "https://github.com/1tgr/bit-vec", features = ["nightly"] }
bitflags = "0.8.2"
lazy_static = { version = "0.2.8", features = ["spin_no_std"] }
libc = { path = "../liblibc" }
syscall = { path = "../libsyscall", features = ["kernel"] }
