[package]
name = "graphics"
version = "0.0.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []
test = ["testlite"]

[lib]
path = "lib.rs"
test = false

[[bin]]
name = "test_graphics"
path = "main.rs"
test = true
required-features = ["test"]

[dependencies]
alloc_system = { path = "../liballoc_system" }
cairo = { path = "../libcairo" }
corepack = { version = "0.4", default-features = false, features = ["alloc"] }
rt = { path = "../librt" }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1"
testlite = { path = "../libtestlite", optional = true }
