[package]
name = "graphics"
version = "0.0.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["client"]
client = []
server = []

[dependencies]
alloc_system = { path = "../liballoc_system" }
cairo = { path = "../libcairo" }
corepack = { version = "0.4", default-features = false, features = ["alloc"] }
ecs = { path = "../libecs" }
os = { path = "../libos" }
rt = { path = "../librt" }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1"
std = { path = "../libstd" }
syscall = { path = "../libsyscall" }
