[package]
name = "graphics"
version = "0.0.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[features]
default = ["client"]
client = []
server = []

[dependencies]
hashbrown = { version = "0.7", default-features = false }
hecs = { version = "0.2", default-features = false, features = ["single_threaded"], git = "https://github.com/1tgr/hecs.git", rev = "2f50eb184834a3693b68f5ce7901beeacf4e0189" }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1"

[target.amd64.dependencies]
alloc_system = { path = "../liballoc_system" }
cairo = { path = "../libcairo" }
corepack = { version = "0.4", default-features = false, features = ["alloc"] }
os = { path = "../libos" }
rt = { path = "../librt" }
std = { path = "../libstd" }
syscall = { path = "../libsyscall" }
