[package]
name = "sprite"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22", default-features = false }
fontdue = "0.5"
raqote = { git = "https://github.com/1tgr/raqote.git", branch = "no-std", default-features = false }
sw-composite = { version = "0.7", git = "https://github.com/1tgr/sw-composite.git", branch = "no-std", default-features = false }

[dev-dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
