[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "terminal"
version = "0.0.0"
edition = "2018"

[dependencies]
cairo = { path = "../cairo" }
graphics = { path = "../graphics" }
hecs = { version = "0.2", default-features = false, git = "https://github.com/1tgr/hecs.git", rev = "e719aeae2234995a1403b5fb59587a8e2a2bb951" }

[target.amd64.dependencies]
alloc_system = { path = "../alloc_system" }
os = { path = "../os" }
rt = { path = "../rt" }
std = { path = "../std" }
syscall = { path = "../syscall" }
