[package]
name = "ui-types"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
edition = "2018"

[dependencies]
euclid = { version = "0.22", default-features = false, features = ["serde"] }
hashbrown = { version = "0.11", default-features = false, features = ["ahash"] }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1"

[target.'cfg(target_os="rust_os")'.dependencies]
corepack = { version = "0.4", default-features = false, features = ["alloc"] }
os = { path = "../os" }
std = { path = "../std" }
syscall = { path = "../syscall" }
