[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "cairo_demo"
version = "0.0.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
alloc_system = { path = "../../liballoc_system" }
cairo = { path = "../../libcairo" }
rt = { path = "../../librt" }
