[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "cairo_demo"
version = "0.0.0"
edition = "2018"

[dependencies]
alloc_system = { path = "../../liballoc_system" }
cairo = { path = "../../libcairo" }
libc = { path = "../../liblibc" }
os = { path = "../../libos" }
rt = { path = "../../librt" }
std = { path = "../../libstd" }
syscall = { path = "../../libsyscall" }
