[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "graphics_client"
version = "0.0.0"
edition = "2018"

[dependencies]
cairo = { path = "../../libcairo" }
graphics = { path = "../../libgraphics" }
hecs = { version = "0.2", default-features = false, git = "https://github.com/1tgr/hecs.git", rev = "e719aeae2234995a1403b5fb59587a8e2a2bb951" }
serde = { version = "1", default-features = false, features = ["alloc"] }

[target.amd64.dependencies]
alloc_system = { path = "../../liballoc_system" }
os = { path = "../../libos" }
rt = { path = "../../librt" }
std = { path = "../../libstd" }
syscall = { path = "../../libsyscall" }
