[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "graphics_server"
version = "0.0.0"

[[bin]]
name = "graphics_server"
path = "main.rs"
test = false

[dependencies]
alloc_system = { path = "../../liballoc_system" }
cairo = { path = "../../libcairo" }
graphics = { path = "../../libgraphics" }
syscall = { path = "../../libsyscall" }
