[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "graphics_server"
version = "0.0.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "graphics_server"
path = "main.rs"
test = false

[dependencies]
alloc_system = { path = "../../liballoc_system" }
cairo = { path = "../../libcairo" }
graphics = { path = "../../libgraphics" }
rt = { path = "../../librt" }
serde = { version = "1", default-features = false, features = ["alloc"] }
