[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "graphics_server"
version = "0.0.0"
edition = "2018"

[dependencies]
alloc_system = { path = "../../liballoc_system" }
cairo = { path = "../../libcairo" }
graphics = { path = "../../libgraphics" }
os = { path = "../../libos" }
rt = { path = "../../librt" }
serde = { version = "1", default-features = false, features = ["alloc"] }
std = { path = "../../libstd" }
syscall = { path = "../../libsyscall" }
