[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "hello"
version = "0.0.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "hello"
path = "main.rs"
test = false

[dependencies]
alloc_system = { path = "../../liballoc_system" }
rt = { path = "../../librt" }
