[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "input"
version = "0.0.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "input"
path = "main.rs"
test = false

[dependencies]
alloc_system = { path = "../../liballoc_system" }
rt = { path = "../../librt" }
