[package]
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
name = "input"
version = "0.0.0"
edition = "2018"

[dependencies]
alloc_system = { path = "../../liballoc_system" }
os = { path = "../../libos" }
rt = { path = "../../librt" }
std = { path = "../../libstd" }
syscall = { path = "../../libsyscall" }
